@@ -1,5 +1,6 @@
 Upcoming:
 - Fixed a rendering issue with the ghost items in the crafter. They were not faded
+- Fixed a bug when remembering items in the crafter. This would also lock some of the player inventory slots
 
 1.18-4.0.6:
 - Fixed a crash in the digit block
